@@ -316,6 +316,9 @@ Release 1.2.0 - unreleased
     handles hostname starting with a numeric character.  (Jing Zhao via
     szetszwo)
 
+    HDFS-4208. NameNode could be stuck in SafeMode due to never-created
+    blocks. (Brandon Li via suresh)
+
 Release 1.1.1 - Unreleased
 
   INCOMPATIBLE CHANGES
